Jann 30/objects/GS1_CountryAuthor__c.object
<CustomObject>
    <fields>
        <fullName>AuthorProfile__c</fullName>
        <label>Author Profile</label>
        <referenceTo>GS1_AuthorProfile__c</referenceTo>
        <relationshipLabel>Countries</relationshipLabel>
        <relationshipName>Countries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Country_Reader__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Country Reader Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <referenceTo>GS1_Country__c</referenceTo>
        <relationshipLabel>Authors</relationshipLabel>
        <relationshipName>Authors</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <formula>AuthorProfile__r.Name +  &apos;~&apos; + Country__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UniqueKey</label>
        <type>Text</type>
    </fields>
    <label>GS1 Country Author</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Ref #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GS1 Country Authors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>